fix: overflow bug

--- a/src/Valentine/heart/heart.css
+++ b/src/Valentine/heart/heart.css
@@ -4,6 +4,9 @@
   --secondary-color: #ff304f;
   --heart-size: 20px;
 }
+body {
+  overflow: hidden; 
+}
 
 /* Container */
 .heart-container {
